ng-cloak has been added to avoid the flicker in the browser

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -1,5 +1,14 @@
 /* app css stylesheet */
 
+/* 
+  Allow angular.js to be loaded in body, hiding cloaked elements until 
+  templates compile.  The !important is important given that there may be 
+  other selectors that are more specific or come later and might alter display.  
+ */
+[ng\:cloak], [ng-cloak], .ng-cloak {
+  display: none !important;
+}
+
 body {
   background: #e8e8e8;
   color: #666;
